python/testData/inspections/PyCompatibilityInspection/importStatement.py
<error descr="Python version 2.7 does not have module builtins"><warning descr="Python version 2.6, 2.7 do not have module builtins">import builtins</warning></error>

<warning descr="Python version 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7 do not have module __builtin__">import __builtin__</warning>